# Histograph

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PIPELINE.md  db.py  docker-compose.yml  docker-entrypoint.sh  fetch_videos.py  parse_videos.py  push-to-railway.sh  pyproject.toml  railway.toml  schema.sql  videos.db-shm  videos.db-wal  youtube.py
.playwright-mcp/: page-2026-04-28T20-34-13-310Z.yml  page-2026-04-28T22-55-45-383Z.yml  page-2026-04-28T22-57-39-335Z.yml  page-2026-04-29T00-58-14-149Z.yml  page-2026-04-29T01-01-37-643Z.yml  page-2026-04-29T01-09-15-015Z.yml  page-2026-04-29T01-10-07-477Z.yml  page-2026-04-29T01-10-32-319Z.yml  page-2026-04-29T01-18-59-171Z.yml  page-2026-04-29T01-35-14-792Z.yml  page-2026-04-29T14-16-37-278Z.yml  page-2026-04-29T14-28-09-105Z.yml
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: auth.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/actions/: auth.ts
frontend/src/app/api/search/: route.ts
frontend/src/app/api/videos/: route.ts
frontend/src/app/api/watched/: route.ts
frontend/src/entities/event/model/: events.ts
frontend/src/shared/config/: palette.ts  themes.ts  timeline.ts
frontend/src/shared/lib/: auth-db.ts  db.ts  pool.ts  session.ts  telegram.ts
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
parser/: __init__.py  fetch_videos.py  migrate.py  parse_videos.py  youtube.py
(+17 files in other folders)
